--- a/package.json
+++ b/package.json
@@ -19,19 +19,23 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cd server && npm install && cd .. && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "cd server && npm start",
     "server:dev": "cd server && npm run dev",
     "server:init": "cd server && npm run init-db",
     "install:server": "cd server && npm install",
-    "dev": "concurrently \"npm run server:dev\" \"npm start\""
+    "dev": "concurrently \"npm run server:dev\" \"npm start\"",
+    "start:prod": "cd server && node server.js"
   },
   "eslintConfig": {
     "extends": [
       "react-app"
     ]
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "browserslist": {
     "production": [
