--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "server:init": "cd server && npm run init-db",
     "install:server": "cd server && npm install",
     "dev": "concurrently \"npm run server:dev\" \"npm start\"",
-    "start:prod": "cd server && node server.js"
+    "start:prod": "NODE_ENV=production cd server && node server.js"
   },
   "eslintConfig": {
     "extends": [
