--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "proxy": "http://localhost:8080",
   "browserslist": {
     "production": [
       ">0.2%",
