--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -9,7 +9,7 @@ cmds = [
 
 [phases.build]
 cmds = [
-  "GENERATE_SOURCEMAP=false NODE_OPTIONS='--max-old-space-size=2048' npm run build:prod"
+  "CI=false GENERATE_SOURCEMAP=false NODE_OPTIONS='--max-old-space-size=2048' npm run build:prod"
 ]
 
 [start]
