--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "concurrently": "^8.2.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm run start:prod",
+    "dev": "concurrently \"npm run server:dev\" \"react-scripts start\"",
     "build": "cd server && npm install && cd .. && react-scripts build",
     "build:prod": "react-scripts build",
     "test": "react-scripts test",
@@ -27,7 +28,6 @@
     "server:dev": "cd server && npm run dev",
     "server:init": "cd server && npm run init-db",
     "install:server": "cd server && npm install",
-    "dev": "concurrently \"npm run server:dev\" \"npm start\"",
     "start:prod": "NODE_ENV=production cd server && node server.js"
   },
   "eslintConfig": {
